# pulseboard

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Install-Autostart.bat  LICENSE  PulseBoard.pyw  README.md  README.zh-CN.md  Start-PulseBoard.bat  Uninstall-Autostart.bat  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: test.yml
pulseboard/: __init__.py  codex_collector.py  collector.py  desktop.py  server.py
pulseboard/web/: app.js  index.html  styles.css
scripts/: autostart.ps1  start.ps1
tests/: test_codex_collector.py  test_collector.py  test_desktop.py  test_server.py  test_web_assets.py
