[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pulseboard"
version = "1.2.1"
description = "A privacy-first Windows dashboard for system resources, top programs, and local Codex usage."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Justin-147" }]
dependencies = ["psutil>=5.9,<8"]

[project.scripts]
pulseboard = "pulseboard.desktop:main"
